<resources>
    <string name="app_name">MusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password (At least 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forgotten password?</string>
    <string name="forget_password_">Forget Password ?</string>
    <string name="Dont_worry_">Don\'t worry we just need your register email address ant it\'s done!</string>
    <string name="go_back">Go back</string>
    <string name="reset_password">Reset Password</string>

    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>


</resources>